# Ultra96-embeded-rust-program

./: Cargo.toml
src/: main.rs
