[package]
authors = ["waelchabchoub <waelchabchoub@outlook.com>"]
edition = "2018"
readme = "README.md"
name = "ultra96"
version = "0.1.0"

[dependencies]
fugit = "0.3.6"
embedded-hal = "0.2"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"


[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f407"] # replace the model of your microcontroller here

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "ultra96"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
